# teamcollabpro

./: .pre-commit-config.yaml  pyproject.toml
teamcollabpro/: .env  manage.py
teamcollabpro/teamcollabpro/: asgi.py  settings.py  urls.py  wsgi.py
