[tool.poetry]
name = "teamcollabpro"
version = "0.1.0"
description = ""
authors = ["ahzees <matviy.stets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django-dotenv = "^1.4.2"
django = "^4.2.4"
psycopg2 = "^2.9.7"
pre-commit = "^3.3.3"
black = "^23.7.0"
mypy = "^1.4.1"
isort = "^5.12.0"
commitizen = "^3.6.0"
flakehell = "^0.9.0"
flake8 = "3.8.0"

[tool.flakehell]
max_line_length = 88

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "C0114, C0115, R0903, C0116, C0415, W0614, E1101"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
